# DEEP6

./: .continue-here.md  .editorconfig  .env.example  .gitignore  CLAUDE.md  DEEP6.csproj  DEEP6.sln  HANDOFF.md  Makefile  README.md  WINDOWS-VSCODE-HANDOFF.md  backtest_validation.csv  footprint_databento_validation.csv  pyproject.toml  sweep_results.csv
.claude/: settings.json
.handoff/: README.md  to-mac.md  to-windows.md
.planning/: PHASE1-REVIEW.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  backtest-tier3-followsignal-spec.md  config.json
.planning-v1-nt8/: SESSION-PROGRESS.md  STATE.md
AddOns/: DEEP6.Core.cs  DEEP6.E1.cs  DEEP6.E2.cs  DEEP6.E3.cs  DEEP6.E4.cs  DEEP6.E5.cs  DEEP6.E6.cs  DEEP6.E7.cs  DEEP6.Render.cs  DEEP6.Scorer.cs  DEEP6.UI.cs  DEEP6._CompileTest.cs
Indicators/: DEEP6.cs
dashboard/: .env.example  README.md  components.json  package-lock.json  package.json  vitest.config.ts
deep6/: __main__.py  config.py
docs/: DEEP6_Master_Blueprint_v2.md  RUNBOOK.md
ninjatrader/: AI-HANDOFF.md  README.md  SETUP-GUIDE.md  WINDOWS-SETUP-HANDOFF.md  ninjascript-ai-context.md
scripts/: Deploy-ToNT8.ps1  README.md  Trigger-NT8Compile.ps1  Watch-AndDeploy.ps1  backtest_3mo_full.py  backtest_r1_finetune.py  backtest_r2_walkforward.py  backtest_r3_stress.py  backtest_r4_multitf.py  backtest_r5_ensemble.py  backtest_signals.py  backtest_vwap_30m.py  benchmark_kronos.py  deep6_down.sh  deep6_healthcheck.py  deep6_status.sh  deep6_up.sh  demo_broadcast.py  gex_service.py  gex_service_v2.py  launch_tradingview.sh  measure_loop_lag.py  opt1_atr_stops.py  opt1_atr_stops.txt  opt2_regime_filter.py  opt2_regime_filter.txt  opt3_trailing_stop.py  opt3_trailing_stop.txt  opt4_time_day_vol.py  opt4_time_day_vol.txt  opt5_loss_breaker.py  opt5_loss_breaker.txt  opt6_multi_tf.py  opt6_multi_tf.txt  opt7_combined.py  opt7_combined.txt  opt8_sltp_sweep.py  opt8_sltp_sweep.txt  phase12_burn_in.py  phase12_burn_in_real.py  (+13 more)
tests/: DEEP6.Tests.md  conftest.py  test_absorption.py  test_auction.py  test_bar_builder.py  test_counter_spoof.py  test_counter_spoof_engine.py  (+31 more)
(+816 files in other folders)
